AUGREL/src/objects/Financial_Account_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Garage_Work_Phone_Status__c</fullName>
        <description>Added as aprt of StrikeIron Integratrion</description>
        <label>Work Phone Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Garage_Zip_Code_Extn__c</fullName>
        <label>Garage Zip Code Extn</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone_BillTo__c</fullName>
        <description>Home Phone Number</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Garage__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Phone_No_Call_Reason_BillTo__c</fullName>
        <formula>CASE(Home_Phone_No_Call_Reason_Code_BillTo__c,
&quot;D&quot;, &quot;D - DNC indicator checked for Home #&quot;,
&quot;S&quot;, &quot;S - Home # matches another number on the account that is marked DNC&quot;,
&quot;X&quot;, &quot;X - Invalid indicator checked for Home #&quot;,
&quot;B&quot;, &quot;B - Mobile indicator checked for the Home # and abbreviated/overall consent is “No”&quot;,
&quot;C&quot;, &quot;C - No indicators or restrictions&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone No-Call Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_No_Call_Reason_Code_BillTo__c</fullName>
        <label>Home Phone No-Call Reason Code BillTo</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_No_Call_Reason_Code_Garage__c</fullName>
        <label>Home Phone No-Call Reason Code Garage</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_No_Call_Reason_Garage__c</fullName>
        <formula>CASE(Home_Phone_No_Call_Reason_Code_Garage__c,
&quot;D&quot;, &quot;D - DNC indicator checked for Home #&quot;,
&quot;S&quot;, &quot;S - Home # matches another number on the account that is marked DNC&quot;,
&quot;X&quot;, &quot;X - Invalid indicator checked for Home #&quot;,
&quot;B&quot;, &quot;B - Mobile indicator checked for the Home # and abbreviated/overall consent is “No”&quot;,
&quot;C&quot;, &quot;C - No indicators or restrictions&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone No-Call Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Ownership_Score_Billing__c</fullName>
        <description>SRC: UCM 
INT: TIBCO UCM Update 
Trans: N 
BU: Legal and Compliance requirements for TFS auto dialer 
FD: A third party vendor services is utilized to scrub the current customer phone data for validation purposes to determine phone ownership. UCM publishes the data to downstream system to indicate the owner confidence. (CP 2401)</description>
        <label>Home Phone Ownership Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Ownership_Score_Garage__c</fullName>
        <description>SRC: UCM 
INT: TIBCO UCM Update 
Trans: N 
BU: Legal and Compliance requirements for TFS auto dialer 
FD: A third party vendor services is utilized to scrub the current customer phone data for validation purposes to determine phone ownership. UCM publishes the data to downstream system to indicate the owner confidence. (CP 2401)</description>
        <label>Home Phone Ownership Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identity_Theft_Indicator_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identity Theft Indicator Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Home_Phone_Acknowledged_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the user to indicate if they acknowledge they&apos;re providing an invalid home phone number.</description>
        <inlineHelpText>Check to acknowledge an invalid phone number has been entered.</inlineHelpText>
        <label>Home Phone Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Home_Phone_Acknowledged_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the user to indicate if they acknowledge they&apos;re providing an invalid home phone number.</description>
        <inlineHelpText>Check to acknowledge an invalid phone number has been entered.</inlineHelpText>
        <label>Home Phone Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Mobile_Phone_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the user to indicate if they acknowledge they&apos;re providing an invalid mobile phone number.</description>
        <inlineHelpText>Check to acknowledge an invalid phone number has been entered.</inlineHelpText>
        <label>Mobile Phone Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Work_Phone_Acknowledged_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the user to indicate if they acknowledge they&apos;re providing an invalid home phone number.</description>
        <inlineHelpText>Check to acknowledge an invalid phone number has been entered.</inlineHelpText>
        <label>Work Phone Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Work_Phone_Acknowledged_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the user to indicate if they acknowledge they&apos;re providing an invalid home phone number.</description>
        <inlineHelpText>Check to acknowledge an invalid phone number has been entered.</inlineHelpText>
        <label>Work Phone Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_BillTo_Name__c</fullName>
        <label>Bill To Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City_BillTo__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City_Garage__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City_State_Zip__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to determine the appropriate third line (city, state, zip) of a mailing destination for a customer based on whether the account is a retail or lease and if it&apos;s a lease, whether the alternate billing address information is used.</description>
        <formula>IF(Financial_Account__r.RecordType.Name = &quot;Lease&quot; &amp;&amp; !ISBLANK(Mailing_City_BillTo__c),
Mailing_City_BillTo__c &amp; &quot;, &quot; &amp; TEXT(Mailing_State_BillTo__c) &amp; &quot; &quot; &amp; Mailing_PostalCode_BillTo__c &amp; IF(!ISBLANK(Billing_Zip_Code_Extn__c), &quot;-&quot; &amp; Billing_Zip_Code_Extn__c, &quot;&quot;)
,
Mailing_City_Garage__c &amp; &quot;, &quot; &amp; TEXT(Mailing_State_Garage__c) &amp; &quot; &quot; &amp; Mailing_Postal_Code_Garage__c &amp; IF(!ISBLANK(Garage_Zip_Code_Extn__c), &quot;-&quot; &amp; Garage_Zip_Code_Extn__c, &quot;&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City State Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to determine the appropriate mailing city for a customer based on whether the account is a retail or lease and if it&apos;s a lease, whether the alternate billing address information is used.</description>
        <formula>IF(Financial_Account__r.RecordType.Name = &quot;Lease&quot; &amp;&amp; !ISBLANK(Mailing_City_BillTo__c), 
Mailing_City_BillTo__c, 
Mailing_City_Garage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_CountryCode_BillTo__c</fullName>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>Mailing CountryCode BillTo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Country_Code_Garage__c</fullName>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>Mailing Country Code Garage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_PostalCode_BillTo_Ext__c</fullName>
        <label>Mailing PostalCode BillTo Ext</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_PostalCode_BillTo__c</fullName>
        <description>Zip Code Ext</description>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code_Garage_Ext__c</fullName>
        <label>Mailing Postal Code Garage Ext</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code_Garage__c</fullName>
        <description>Zip Code</description>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_BillTo__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Garage__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to determine the appropriate mailing state for a customer based on whether the account is a retail or lease and if it&apos;s a lease, whether the alternate billing address information is used.</description>
        <formula>IF(Financial_Account__r.RecordType.Name = &quot;Lease&quot; &amp;&amp; !ISBLANK(Mailing_City_BillTo__c), 
TEXT(Mailing_State_BillTo__c),
TEXT(Mailing_State_Garage__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street1__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to determine the appropriate mailing street first line for a customer based on whether the account is a retail or lease and if it&apos;s a lease, whether the alternate billing address information is used.</description>
        <formula>IF(Financial_Account__r.RecordType.Name = &quot;Lease&quot; &amp;&amp; !ISBLANK(Mailing_City_BillTo__c)
,
IF(FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_BillTo__c) = 0, Mailing_Street_BillTo__c, LEFT(Mailing_Street_BillTo__c, FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_BillTo__c) - 1))
,
IF(FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_Garage__c) = 0, Mailing_Street_Garage__c, LEFT(Mailing_Street_Garage__c, FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_Garage__c) - 1))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street2__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to determine the appropriate mailing second street line for a customer based on whether the account is a retail or lease and if it&apos;s a lease, whether the alternate billing address information is used.</description>
        <formula>IF(Financial_Account__r.RecordType.Name = &quot;Lease&quot; &amp;&amp; !ISBLANK(Mailing_City_BillTo__c)
,
IF(FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_BillTo__c) = 0, &quot;&quot;, RIGHT(Mailing_Street_BillTo__c, LEN(Mailing_Street_BillTo__c) - FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_BillTo__c)))
,
IF(FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_Garage__c) = 0, &quot;&quot;, RIGHT(Mailing_Street_Garage__c, LEN(Mailing_Street_Garage__c) - FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_Garage__c)))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_BillTo__c</fullName>
        <description>State</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Garage__c</fullName>
        <description>Street</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to determine the appropriate mailing zip code for a customer based on whether the account is a retail or lease and if it&apos;s a lease, whether the alternate billing address information is used.</description>
        <formula>IF(Financial_Account__r.RecordType.Name = &quot;Lease&quot; &amp;&amp; !ISBLANK(Mailing_City_BillTo__c), 
Mailing_PostalCode_BillTo__c &amp; IF(!ISBLANK(Billing_Zip_Code_Extn__c), &quot;-&quot; &amp; Billing_Zip_Code_Extn__c, &quot;&quot;) 
, 
Mailing_Postal_Code_Garage__c &amp; IF(!ISBLANK(Garage_Zip_Code_Extn__c), &quot;-&quot; &amp; Garage_Zip_Code_Extn__c, &quot;&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <formula>Financial_Account__r.Collateral__r.Make__c</formula>
        <label>(IVR) Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Email__c</fullName>
        <description>Marketing Email Address</description>
        <label>Marketing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Military_Service_Branch__c</fullName>
        <formula>TEXT(Account__r.Service_Branch__pc)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Military Service Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_No_Call_Reason_Code__c</fullName>
        <label>Mobile Phone No-Call Reason Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_No_Call_Reason__c</fullName>
        <formula>CASE(Mobile_Phone_No_Call_Reason_Code__c,
&quot;D&quot;, &quot;D - DNC indicator checked for Mobile #&quot;,
&quot;S&quot;, &quot;S - Mobile # matches another number on the account that is marked DNC&quot;,
&quot;X&quot;, &quot;X - Invalid indicator checked for Mobile #&quot;,
&quot;B&quot;, &quot;B - Mobile number with No Consent&quot;, 
&quot;C&quot;, &quot;C - No indicators or restrictions&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone No-Call Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_Ownership_Score__c</fullName>
        <description>SRC: UCM 
INT: TIBCO UCM Update 
Trans: N 
BU: Legal and Compliance requirements for TFS auto dialer 
FD: A third party vendor services is utilized to scrub the current customer phone data for validation purposes to determine phone ownership. UCM publishes the data to downstream system to indicate the owner confidence. (CP 2401)</description>
        <label>Mobile Phone Ownership Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Mobile Number</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <formula>Financial_Account__r.Collateral__r.Model_Name__c</formula>
        <label>(IVR) Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <formula>Financial_Account__r.Collateral__r.Model_Year__c</formula>
        <label>(IVR) Model Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last1__c</fullName>
        <formula>Financial_Account__r.Payment_Amount_Last1__c</formula>
        <label>(IVR) Payment Amount Last1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last2__c</fullName>
        <formula>Financial_Account__r.Payment_Amount_Last2__c</formula>
        <label>(IVR) Payment Amount Last2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last3__c</fullName>
        <formula>Financial_Account__r.Payment_Amount_Last3__c</formula>
        <label>(IVR) Payment Amount Last3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last1__c</fullName>
        <formula>Financial_Account__r.Payment_Date_Last1__c</formula>
        <label>(IVR) Payment Date Last1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last2__c</fullName>
        <formula>Financial_Account__r.Payment_Date_Last2__c</formula>
        <label>(IVR) Payment Date Last2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last3__c</fullName>
        <formula>Financial_Account__r.Payment_Date_Last3__c</formula>
        <label>(IVR) Payment Date Last3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Privacy_Elec_Affiliate_Marketing_Source__c</fullName>
        <label>Affiliate Marketing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Elect_3rd_Party_Sharing_Source__c</fullName>
        <description>Third Party Sharing Source Flag</description>
        <label>Privacy Elect 3rd Party Sharing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Elect_Affiliate_Sharing_Source__c</fullName>
        <description>Affiliate Sharing Source Flag</description>
        <label>Privacy Elect Affiliate Sharing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Affiliate_Marketing__c</fullName>
        <description>Affiliate Marketing Flag</description>
        <label>Affiliate Marketing</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Affiliate_Sharing__c</fullName>
        <description>Affiliate Sharing Flag</description>
        <label>Affiliate Sharing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_DealershipSource__c</fullName>
        <description>Dealer Privacy Source Flag</description>
        <label>Privacy Election DealershipSource</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Dealership__c</fullName>
        <description>Dealer Privacy Flag</description>
        <label>Toyota/Lexus Dealer</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_FCRA_Sharing_Source__c</fullName>
        <description>FCRA Sharing Source Flag</description>
        <label>Privacy Election FCRA Sharing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_FCRA_Sharing__c</fullName>
        <description>FCRA Sharing Flag</description>
        <label>Credit App/Rpt</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Telemarketing_Source__c</fullName>
        <description>Telemarketing Source Flag</description>
        <label>Privacy Election Telemarketing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Telemarketing__c</fullName>
        <description>Telemarketing Flag</description>
        <label>TFS Telemarketing</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Third_Party_Sharing__c</fullName>
        <description>Third Party Sharing Flag</description>
        <label>3rd Party</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RL_Bankruptcy_Status__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Used in the Rights Letters process. When the Financial Account is in an active or discharged bankruptcy status, this indicates the individual borrower&apos;s BK status, where it may be the same or different from the account&apos;s.</description>
        <inlineHelpText>Used in the Rights Letters process. When the Financial Account is in an active or discharged bankruptcy status, this indicates the individual borrower&apos;s BK status, where it may be the same or different from the account&apos;s.</inlineHelpText>
        <label>Bankruptcy Status</label>
        <picklist>
            <picklistValues>
                <fullName>Filing Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Filing Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RL_Customer_Type__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to interpret the borrower type, primary vs. co-, and provide that information to the Adobe Forms Service with a value in the format specified, i.e. Customer vs. CoCustomer.</description>
        <formula>CASE(Borrower_Position__c,
&quot;Primary&quot;,&quot;Customer&quot;,
&quot;Co-X&quot;,&quot;CoCustomer&quot;,
&quot;CoCustomer&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_IsCustomerNotLiableForDeficiencyBuyer__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to evaluate whether the financial account is in an active or discharged status and whether the current customer is a filing party. If both are true, then the customer is not liable for the deficiency and a true flag must be sent to the Adobe Forms Service for this customer&apos;s copy of the rights letter.</description>
        <formula>IF(
(Financial_Account__r.Bankruptcy_Flag__c = &quot;A&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;B&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;C&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;D&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;T&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;E&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;F&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;H&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;G&quot;)

&amp;&amp;

ISPICKVAL(RL_Bankruptcy_Status__c, &quot;Filing Party&quot;),

True,

False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RL_IsCustomerNotLiableForDeficiencyBuyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reentrant_Trigger_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in validation rules to fail (skip) the validation rule when it is being evaluated due to trigger execution - example is a field gets changed by a user and then an after update trigger changes the same value in a called function, setting this value in the initial trigger update and then unsetting it in the called function will cause an applicable validation rule to fail, i.e. not process</description>
        <label>Reentrant Trigger Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResultsHome_Phone_Delivery_Garage__c</fullName>
        <description>Home Phone Number Delivery Results</description>
        <label>ResultsHome Phone Delivery Garage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Home_Phone_Delivery_BillTo__c</fullName>
        <description>Home Phone Number Delivery Results</description>
        <label>Results Home Phone Delivery BillTo</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Work_Phone_Delivery_BillTo__c</fullName>
        <description>Work Phone Number Delivery Results</description>
        <label>Results Work Phone Delivery BillTo</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Work_Phone_Delivery_Garage__c</fullName>
        <description>Work Phone Number Delivery Results</description>
        <label>Results Work Phone Delivery Garage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Email_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added as part of StrikeIron INtegration</description>
        <inlineHelpText>Check to acknowledge and invalid Servicing email has been entered</inlineHelpText>
        <label>Servicing Email Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicing_Email_Hygiene_Result__c</fullName>
        <description>Added as part of StrikeIron Integration</description>
        <label>Servicing Email Hygiene Result</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Email_Status__c</fullName>
        <description>Added as part of StrikeIron Integration</description>
        <label>Servicing Email Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Email_Validated_Time_Stamp__c</fullName>
        <description>Added as part of StrikeIron Integration</description>
        <label>Servicing Email Validated Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Servicing_Email__c</fullName>
        <description>Account Servicing Email Address</description>
        <label>Servicing Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>